--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,15 +11,13 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-<<<<<<< HEAD
-    "mongoose": "^6.7.3",
-=======
     "mongoose": "^6.7.5",
->>>>>>> ab1e4de (member search,paging,delete done)
     "mongoose-unique-validator": "^3.1.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   }
 }
