--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "bootstrap": "^5.2.3",
+    "csvtojson": "^2.0.10",
+    "multer": "^1.4.5-lts.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -39,6 +41,3 @@
     "typescript": "~4.7.2"
   }
 }
-  
-  
-
